--- a/css/style.css
+++ b/css/style.css
@@ -400,10 +400,25 @@ header {
   z-index: 2;
 }
 
+/* .learn-more-button a {
+  width: 130px;
+  height: 50px;
+  font-weight: var(--fw-bold);
+  border-radius: 5%;
+  cursor: pointer;
+  background: var(--clr-accent);
+  margin-top: 1em;
+} */
+
+.learn-more-button:hover {
+  background: var(--clr-light);
+  font-weight: var(--fs-h3);
+}
 .portfolio__img:hover,
-    .portfolio__item:focus .portfolio__img {
+.portfolio__item:focus .portfolio__img {
   transform: scale(1.2);
   opacity: .5;
+  
   /* background-color: var(--clr-accent); */
 }
 
