--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ header {
 .css {width: 80%; background-color: #2196F3;} 
 .js {width: 65%; background-color: #f44336;} 
 .react {width: 85%; background-color: #04AA6D;} 
-.node {width: 75%; background-color: #184d3b;} 
+.node {width: 75%; background-color: #352b38;} 
 .express {width: 80%; background-color: #6d3bca9f;} 
 .ruby-on-rails {width: 60%; background-color: #474fbe;} 
 .testing {width: 60%; background-color: #5f4e5d;} 
